--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/bar": "^0.92.1",
+    "@nivo/core": "^0.92.0",
+    "@nivo/radar": "^0.92.1",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
