--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nivo/bar": "^0.92.1",
+    "@nivo/calendar": "^0.92.2",
     "@nivo/core": "^0.92.0",
     "@nivo/radar": "^0.92.1",
     "@popperjs/core": "^2.11.8",
